tests/baselines/reference/decrementAndIncrementOperators(strict=true).errors.txt
decrementAndIncrementOperators.ts(4,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(6,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(7,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(9,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(10,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(12,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(13,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(15,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(16,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(18,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(19,1): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(21,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(22,3): error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
decrementAndIncrementOperators.ts(37,1): error TS7053: Element implicitly has an 'any' type because expression of type 'number' can't be used to index type 'Number'.
  No index signature with a parameter of type 'number' was found on type 'Number'.


==== decrementAndIncrementOperators.ts (14 errors) ====
    var x = 0;
    
    // errors
    1 ++;
    ~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    (1)++;
    ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    (1)--;
    ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    ++(1);
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    --(1);
      ~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    (1 + 2)++;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    (1 + 2)--;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    ++(1 + 2);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    --(1 + 2);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    (x + x)++;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    (x + x)--;
    ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    ++(x + x);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    --(x + x);
      ~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable or a property access.
    
    //OK
    x++;
    x--;
    
    ++x;
    --x;
    
    (x)++;
    --(x);
    
    ((x))++;
    ((x))--;
    
    x[x++]++;
    ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'number' can't be used to index type 'Number'.
!!! error TS7053:   No index signature with a parameter of type 'number' was found on type 'Number'.
    